# TopLFV

./: .gitmodules  CMakeLists.txt  Makefile  README.md  setup.sh
data/BTV/: 2016APVBtagCorr.root  2016BtagCorr.root  2016reshaping_deepJet.csv  2017BtagCorr.root  2018BtagCorr.root
data/EGM/: el_TOPUL2016APV_XGB.weights.txt
data/MUO/: mu_TOPUL2016_XGB.weights.txt  mu_TOPUL2018_XGB.weights.txt  mu_TOPv2UL2016_XGB.weights.txt
data/MatrixMethod/: 2016APVFakeLMatrixMethod.root  2016APVFakeLSF.root  2016APVFakeTauMatrixMethod.root  2016APVFakeTauSF.root  2016APV_ttVsDY.onnx  2016APV_ttVsDY.txt  2016FakeLMatrixMethod.root  2016FakeLSF.root  2016FakeTauMatrixMethod.root  2016FakeTauSF.root  2016_ttVsDY.onnx  2016_ttVsDY.txt  2017FakeLMatrixMethod.root  2017FakeLSF.root  2017FakeTauMatrixMethod.root  2017FakeTauSF.root  2017_ttVsDY.onnx  2017_ttVsDY.txt  2018FakeLMatrixMethod.root  2018FakeLSF.root  2018FakeTauMatrixMethod.root  2018FakeTauSF.root  2018_ttVsDY.onnx  2018_ttVsDY.txt  test.root
data/TAU/: 2016APVTauID_FF_ptVsEta_DeepTau2017v2p1VSjet.root  2016TauID_FF_ptVsEta_DeepTau2017v2p1VSjet.root  2016_JetToTauFakeFactors.root  (+2 more)
helper/: Count_Nsample.py  Count_Ntotal.py  Count_Ntotal_dilepton.py  Cutflow.cc  DileptonFF.cc  FakeFactor.cc  JetToTauFakeFactor.cc  JetToTauFakeFactors.C  TrileptonFF.cc  bkg_estimate.py  cutflow.py  gen_files_2016.py  gen_files_2016APV.py  gen_files_2017.py  gen_files_2018.py  getSumOfGenWeights.py
hists/: hadd.py
include/: MyAnalysis.h  PU_reWeighting.h  common_details.h  event_candidate.h  fastforest.h  jet_candidate.h  lepton_candidate.h  matrix_method.h  quark_candidate.h  trigger.h
input/: el_TOPUL16_XGB.weights.txt  el_TOPUL17_XGB.weights.txt  el_TOPv2UL17_XGB.weights.txt  el_TOPv2UL18_XGB.weights.txt  el_TOPv2UL2016_XGB.weights.txt  mu_TOPUL2017_XGB.weights.txt  mu_TOPv2UL16APV_XGB.weights.txt
latex/: Cutflow.C  Cutflow.cc
plot/: TrileptonFF.ipynb  commonConfig.py  drawHists.py  drawSignalHists.py  eventYields.py  jetToTauFakeFactors.py  makeHists.py  plotFunctions.py  plotter.py
postproc/: common.py  computeFakeTauSF.py  computeRate.py  cutFlow.py  drawHists.py  jetToTauFakeFactors.py  plotFunctions.py
src/: MyAnalysis.cc  PU_reWeighting.cc  common_details.cc  event_candidate.cc  fastforest.cc  fastforest_functions.cc  jet_candidate.cc  lepton_candidate.cc  main.cc  matrix_method.cc  quark_candidate.cc  trigger.cc
(+14 files in other folders)
